welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
	var tab = new Array[Int]
                  ^indexOfValue:3: error: not found: value length
	for (i <-0 to length-1) {
                      ^